fixed overflowing genres wrapper

--- a/src/App.css
+++ b/src/App.css
@@ -148,9 +148,9 @@ header {
 .search-results {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
   overflow: scroll;
-  padding: 3rem 0 1rem 1rem;
+  padding: 3rem 1rem;
   height: calc(100vh - 8rem);
   position: relative;
 }
@@ -159,7 +159,7 @@ header {
   position: absolute;
   width: 2rem;
   height: 2rem;
-  right: 0;
+  right: 1rem;
   top: 0;
 }
 
@@ -476,30 +476,49 @@ swiper-slide img {
 }
 
 .filter-genres {
-  background-color: var(--black);
-  height: 100vh;
-  width: 100vw;
+  height: calc(100vh - 6rem);
+  width: 100%;
   position: fixed;
-  left: 0;
+  top: 6rem;
+  background-image: linear-gradient(
+    45deg,
+    #000000ee 40%,
+    var(--secondary-dark)
+  );
+  display: flex;
+  /* align-items: center; */
+  padding-top: 8rem;
+  justify-content: center;
+  overflow: scroll;
 }
 
-.filter-genres .genres {
+.genres {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
-  width: 100%;
+  gap: 1rem 1rem;
+  position: absolute;
   padding: 1rem;
-  gap: 1rem;
 }
 
 .genres-header {
   display: flex;
   justify-content: space-between;
-  width: 100%;
+  width: fit-content;
   margin: auto;
   padding: 1rem;
   align-items: center;
+  position: absolute;
+  top: 0;
+}
+
+.genres-header p {
+  cursor: pointer;
+}
+
+.genres-header p:hover {
+  color: var(--primary-color);
 }
 
 .filter-genres .awesome {
@@ -507,9 +526,8 @@ swiper-slide img {
   cursor: pointer;
   font-size: 2em;
   width: 1.5rem;
-  position: fixed;
-  top: 10.5rem;
-  right: 1rem;
+  position: absolute;
+  bottom: 3rem;
 }
 
 .filter-genre {
@@ -664,6 +682,10 @@ swiper-slide img {
     width: 80%;
     right: 0;
     left: 20%;
+  }
+
+  .filter-genres .awesome {
+    bottom: 12rem;
   }
 
   .page {
